[gd_scene load_steps=17 format=3 uid="uid://30oiseyigc32"]

[ext_resource type="Script" path="res://Scripts/card.gd" id="1_x6aav"]
[ext_resource type="Texture2D" uid="uid://1kxbmwun721w" path="res://Assets/Images/Date_4_Portrait.png" id="2_xcfjg"]
[ext_resource type="Texture2D" uid="uid://d2gypca3pixsa" path="res://Assets/Images/Date_6_Portrait.png" id="3_pxds4"]
[ext_resource type="Texture2D" uid="uid://cantr4ef88a2t" path="res://Assets/Images/Date_8_Portrait.png" id="4_ioo7j"]
[ext_resource type="Texture2D" uid="uid://bfjwp28xtvb30" path="res://Assets/Images/Date_10_Portrait.png" id="5_d46nl"]
[ext_resource type="Texture2D" uid="uid://f71snjphp6kc" path="res://Assets/Icons/icons8-chevron-left-96.png" id="6_fq157"]
[ext_resource type="Shader" path="res://Scenes/card.gdshader" id="6_u1scw"]
[ext_resource type="Texture2D" uid="uid://cu4ogtryyo6yq" path="res://Assets/Icons/icons8-chevron-right-96.png" id="7_73nik"]
[ext_resource type="Texture2D" uid="uid://btahbx4pxb87x" path="res://Assets/Icons/information.png" id="9_aoh8l"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_aat2m"]
shader = ExtResource("6_u1scw")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0rmvx"]
shader = ExtResource("6_u1scw")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_281h6"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i43i6"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kssx7"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qfwgj"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="FontVariation" id="FontVariation_xx5ux"]
variation_embolden = 0.3

[node name="Card" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_x6aav")
image1 = ExtResource("2_xcfjg")
image2 = ExtResource("3_pxds4")
image3 = ExtResource("4_ioo7j")
image4 = ExtResource("5_d46nl")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_right = 1080.0
offset_bottom = 1920.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
material = SubResource("ShaderMaterial_aat2m")
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Image" type="TextureRect" parent="ScrollContainer/VBoxContainer"]
material = SubResource("ShaderMaterial_0rmvx")
layout_mode = 2
texture = ExtResource("2_xcfjg")
expand_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PrevButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_hover = ExtResource("6_fq157")
stretch_mode = 3

[node name="NextButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_hover = ExtResource("7_73nik")
stretch_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 1080.0
offset_bottom = 70.0
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 40

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
mouse_filter = 1
value = 100.0
show_percentage = false

[node name="ProgressBar2" type="ProgressBar" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
mouse_filter = 1
value = 100.0
show_percentage = false

[node name="ProgressBar3" type="ProgressBar" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
mouse_filter = 1
value = 100.0
show_percentage = false

[node name="ProgressBar4" type="ProgressBar" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
mouse_filter = 1
value = 100.0
show_percentage = false

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_top = 1323.0
offset_bottom = 1587.0
mouse_filter = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_281h6")
theme_override_styles/hover = SubResource("StyleBoxFlat_i43i6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_kssx7")
theme_override_styles/focus = SubResource("StyleBoxFlat_qfwgj")

[node name="MarginContainer" type="MarginContainer" parent="Button"]
layout_mode = 0
offset_top = -16.0
offset_right = 1080.0
offset_bottom = 248.0
theme_override_constants/margin_left = 60

[node name="HBoxContainer" type="HBoxContainer" parent="Button/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Button/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Name" type="Label" parent="Button/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontVariation_xx5ux")
theme_override_font_sizes/font_size = 40
text = "Name"

[node name="Description" type="Label" parent="Button/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Description
"

[node name="MarginContainer" type="MarginContainer" parent="Button/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 85
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 85

[node name="TextureRect" type="TextureRect" parent="Button/MarginContainer/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 8
texture = ExtResource("9_aoh8l")
expand_mode = 1
stretch_mode = 5

[connection signal="gui_input" from="." to="." method="_on_Card_gui_input"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/PrevButton" to="." method="_on_prev_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
